umol-models-graph/tests/mol_parsing/snapshots/mol_parsing__mol_parsing_suite__store_summary_snapshot@parse_mol_extended_molecule_jmol_ocmsio.mol.snap
---
source: umol-models-graph/tests/mol_parsing/mod.rs
expression: summary
---
atom_count: 52
bond_count: 56
sum_formula: C8H24O12Si8
graph6: sY_I?CA?_?A???????????B??IC?AC?@??GOO?_??E???E???S??@G??@??????@????G????_O????O?????@?????C????G?????C?????_????????G?????A??????O?????@??????A?????@???????_??????G??????@???????C??????C???????C???????A????????_???????C??
