umol-models-graph/tests/mol_parsing/snapshots/mol_parsing__mol_parsing_suite__store_summary_snapshot@parse_mol_extended_molecule_jmol_p_snub_dodecahedron.mol.snap
---
source: umol-models-graph/tests/mol_parsing/mod.rs
expression: summary
---
atom_count: 60
bond_count: 150
sum_formula: C60
graph6: "{K@?G?????A?I?c@[?D?BGAcCOA[??????O??C?GA???????O?E?G?B???@g??AG?c?G????y_S?C????A?_??@?@???O????A?@_@?????BO??@?A???B?@P???G?G?????G???C?@_????O???????OC??@@?G???B_@?O????D?_?????C_??_???O?@???@c?c??????bG_C_????_?????yO????@K???????_G???G????a???WC???S???K?_?D?OG???C@C???`??@?????wC??G??O??R??"
