umol-models-graph/tests/mol_parsing/snapshots/mol_parsing__mol_parsing_suite__store_summary_snapshot@parse_mol_extended_molecule_jmol_trans-co-en2-cl2.mol.snap
---
source: umol-models-graph/tests/mol_parsing/mod.rs
expression: summary
---
atom_count: 27
bond_count: 28
sum_formula: C4H16Cl2CoN4
graph6: ZpI?GG_?G@?c?@?@O?C????C??S?????C??A??C????_??A???c????_???O
