umol-models-graph/tests/mol_parsing/snapshots/mol_parsing__mol_parsing_suite__store_summary_snapshot@parse_mol_extended_molecule_jmol_twistane.mol.snap
---
source: umol-models-graph/tests/mol_parsing/mod.rs
expression: summary
---
atom_count: 26
bond_count: 28
sum_formula: C10H16
graph6: YkCgGD@AK?O?O?G?C??_?C??G??G??C??A???O??A???C???C???C???
