umol-models-graph/tests/mol_parsing/snapshots/mol_parsing__mol_parsing_suite__store_summary_snapshot@parse_mol_extended_molecule_jmol_venteo.mol.snap
---
source: umol-models-graph/tests/mol_parsing/mod.rs
expression: summary
---
atom_count: 31
bond_count: 40
sum_formula: C10H15FeP5
graph6: ^|fKCE@_KC_O?O?G?A??O?@??C??G??C??A???_??A???G???O???G???C???@????C????O????_??
