umol-models-graph/tests/mol_parsing/snapshots/mol_parsing__mol_parsing_suite__store_summary_snapshot@parse_mol_extended_molecule_ketcher_Nucleotides and Superatoms-expected.mol.snap
---
source: umol-models-graph/tests/mol_parsing/mod.rs
expression: summary
---
atom_count: 32
bond_count: 36
sum_formula: C32
graph6: _r??OC@?GG_??@?@H_@?E?????G??O??K?????????@???@???@????_??AG????????C????O??H_???C?W
